<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/core_space_24"
    tools:context=".sample.demo.presentation.ui.DemoFragment">

    <TextView
        android:id="@+id/tvWeatherTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/demo_weather_title"
        android:textAppearance="@style/TextAppearance.AndroidXmlBase.BodyEmphasis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardWeather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/core_space_12"
        app:cardBackgroundColor="@color/core_color_primary_container"
        app:cardCornerRadius="@dimen/core_radius_16"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWeatherTitle"
        app:strokeWidth="0dp">

        <TextView
            android:id="@+id/tvWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/core_space_16"
            android:text="@string/demo_weather_loading"
            android:textAppearance="@style/TextAppearance.AndroidXmlBase.Body"
            android:textColor="@color/core_color_on_primary_container"
            tools:text="Partly cloudy · 31.8°C · Feels like 37.0°C · Wind 11.0 km/h" />

    </com.google.android.material.card.MaterialCardView>

    <com.thanhng224.androidxmlbase.core.ui.components.FrameButton
        android:id="@+id/btnRefreshWeather"
        android:layout_width="0dp"
        android:layout_height="@dimen/core_size_48"
        android:layout_marginTop="@dimen/core_space_12"
        app:coreButtonBackgroundColor="@color/core_color_surface"
        app:coreButtonCornerRadius="@dimen/core_radius_12"
        app:coreButtonShape="rectangle"
        app:coreButtonStrokeColor="@color/core_color_primary"
        app:coreButtonStrokeWidth="@dimen/core_stroke_width"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardWeather">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/demo_weather_refresh"
            android:textAppearance="@style/TextAppearance.AndroidXmlBase.BodyEmphasis"
            android:textColor="@color/core_color_primary" />

    </com.thanhng224.androidxmlbase.core.ui.components.FrameButton>

    <TextView
        android:id="@+id/tvCounterTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/core_space_32"
        android:text="@string/demo_counter_title"
        android:textAppearance="@style/TextAppearance.AndroidXmlBase.Caption"
        android:textColor="@color/core_color_on_surface_variant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRefreshWeather" />

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/core_space_8"
        android:textAppearance="@style/TextAppearance.AndroidXmlBase.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCounterTitle"
        tools:text="0" />

    <com.thanhng224.androidxmlbase.core.ui.components.FrameButton
        android:id="@+id/btnIncrement"
        android:layout_width="0dp"
        android:layout_height="@dimen/core_size_48"
        android:layout_marginTop="@dimen/core_space_12"
        app:coreButtonBackgroundColor="@color/core_color_primary"
        app:coreButtonCornerRadius="@dimen/core_radius_12"
        app:coreButtonShape="rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCount">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/demo_increment"
            android:textAppearance="@style/TextAppearance.AndroidXmlBase.BodyEmphasis"
            android:textColor="@color/core_color_on_primary" />

    </com.thanhng224.androidxmlbase.core.ui.components.FrameButton>

</androidx.constraintlayout.widget.ConstraintLayout>
